--- a/FincoTel/fincotel/package.json
+++ b/FincoTel/fincotel/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0"
+		"@fontsource/fira-mono": "^4.5.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.43"
 	}
 }
