--- a/FincoTel/fincotel/package.json
+++ b/FincoTel/fincotel/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
+		"@types/jquery": "^3.5.14",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
@@ -24,6 +25,8 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.43"
+		"@sveltejs/adapter-static": "^1.0.0-next.43",
+		"jquery": "^3.6.1",
+		"svelte-navigator": "^3.2.2"
 	}
 }
